# aicodeprep

./: .gitignore  CHANGELOG.md  LICENSE  README.md  default_config.yaml  fullcode.txt  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
aicodeprep/: default_config.yaml  main.py
